# WorldSphereMod

./: .coderabbit.yaml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .vercelignore  ADR.md  AGENTS.md  AGENT_INBOX.md  CHANGELOG.md  CHARTER.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  Dockerfile  FUNCTIONAL_REQUIREMENTS.md  GEMINI.md  Justfile  LICENSE  PLAN.md  PRD.md  README.md  RELEASING.md  RESEARCH.md  SECURITY.md  SOTA.md  SPEC.md  SUPPORT.md  Taskfile.yaml  WorldSphereAPI.csproj  WorldSphereMod.csproj  WorldSphereMod.sln  vercel.json
.claude/: mcp-servers.json
.devcontainer/: devcontainer.json
.githooks/: README.md  pre-commit  pre-commit.ps1
.github/: CODEOWNERS  pull_request_template.md
.playwright-mcp/: page-2026-05-21T01-18-14-868Z.yml  page-2026-05-21T01-18-53-920Z.yml  page-2026-05-21T01-19-52-427Z.yml
Tools/: bake-shaders.ps1  ci-stub-worldbox-refs.sh  ci-test.ps1  ci-worldbox-ref-dlls.manifest  do-all.ps1  fireworks-vision.env.example  gen-phase-icons.ps1  headless-launch.ps1  install.ps1  manual-smoke.ps1  omniroute-vision.env.example  reset_settings.py  runtime-tests.py  setup-compound-spheres-3d.ps1  setup-omniroute-laptop.md  sync-playcua-screenshots.ps1  uninstall.ps1  verify-journeys.ps1  verify-omniroute-remote.ps1  verify-omniroute-via-ssh.ps1  verify-pipeline.sh  verify-visual.py  wsm-live-verify.ps1  wsm-ssim-compare.py  wsm3d-audit-tick.ps1  wsm3d-stats.ps1  wsm3d.completion.ps1  wsm3d.ps1
Tools/wsm3d-mcp/: .gitignore  README.md  pyproject.toml
Tools/wsm3d-mcp/wsm3d_mcp/: __init__.py  paths.py  server.py
Tools/wsm3d-mcp/wsm3d_mcp/tools/: __init__.py  build.py  codex.py  game.py  journey.py  live_verify.py  log.py  settings.py
Tools/wsm3d-preview/: Cargo.toml  README.md
Tools/wsm3d-preview/src/: fixtures.rs  main.rs  phases.rs  render.rs  voxelize.rs
WorldSphereAPI/: WorldSphereAPI.cs
(+639 files in other folders)
