[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsm3d-mcp"
version = "0.1.0"
description = "FastMCP server for WorldSphereMod3D"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "KooshaPari", email = "kooshapari@gmail.com"},
]
dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
wsm3d-mcp = "wsm3d_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["wsm3d_mcp"]
